--- a/style.css
+++ b/style.css
@@ -400,7 +400,9 @@ html, body {
   ================================*/
 
   .feature-item {
-    transition: all .2s ease-in-out 0s !important; }
+    transition: all .2s ease-in-out 0s !important;
+    background-color: white;
+   }
     .feature-item:hover {
       transform: translateY(-13px); }
   
@@ -408,324 +410,6 @@ html, body {
     background-color: #ff00cc; }
   
   /*=====  End of FEATURES  ======*/
-  /*=============================
-  =            TESTI            =
-  =============================*/
-  .testi-img img {
-    height: 60px;
-    width: 60px !important;
-    border-radius: 50%;
-    display: inline-block !important; }
-  
-  .testi-details {
-    text-align: left; }
-  
-  .testi-text {
-    font-weight: 300;
-    padding-top: 50px;
-    padding-bottom: 50px; }
-  
-  .testi-icon {
-    color: #ff00cc; }
-  
-  .testi-content {
-    margin-top: 80px;
-    padding-bottom: 80px; }
-  
-  .testi-item {
-    margin-left: 15px;
-    margin-right: 15px; }
-  
-  .owl-dot {
-    position: relative;
-    display: inline-block;
-    margin: 0 5px;
-    width: 12px;
-    height: 12px;
-    cursor: pointer; }
-    .owl-dot span {
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      outline: none;
-      border-radius: 50%;
-      background-color: rgba(255, 0, 204, 0.3);
-      text-indent: -999em;
-      cursor: pointer;
-      position: absolute;
-      box-shadow: 0 0 0 2px rgba(255, 255, 255, 0);
-      -webkit-transition: box-shadow 0.3s ease, background-color 0.3s ease;
-      transition: box-shadow 0.3s ease, background-color 0.3s ease; }
-    .owl-dot.active > span {
-      background-color: transparent;
-      box-shadow: 0 0 0 2px #ff00cc; }
-  
-  .owl-dots {
-    position: absolute;
-    bottom: 0;
-    display: block;
-    text-align: center;
-    left: 0;
-    right: 0;
-    clear: both;
-    padding: 0;
-    list-style: none;
-    cursor: default;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none; }
-  
-  .heading-section {
-    position: relative; }
-  
-  /*=====  End of TESTI  ======*/
-  /*=================================
-  =            PORTFOLIO            =
-  =================================*/
-  .filter-button-group {
-    margin-bottom: 15px; }
-    .filter-button-group a {
-      margin: 5px;
-      cursor: pointer; }
-  
-  .grid-link a {
-    margin: 5px;
-    font-size: 20px;
-    color: #000; }
-  
-  .grid-portfolio {
-    overflow: hidden; }
-  
-  .gutter-sizer {
-    width: 2%; }
-  
-  .grid-sizer,
-  .grid-item {
-    width: 32%; }
-  
-  .grid-item {
-    margin-bottom: 20px;
-    border-radius: 5px;
-    overflow: hidden; }
-    .grid-item:hover .grid-info {
-      top: 50%;
-      opacity: 1; }
-  
-  .grid-item-wrapper:before {
-    content: '';
-    display: block;
-    background: rgba(255, 255, 255, 0.7);
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    transition: all .3s ease;
-    opacity: 0; }
-  
-  .grid-item-wrapper:hover:before {
-    opacity: 1; }
-  
-  .grid-info {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    opacity: 0;
-    transition: all .3s ease; }
-  
-  .lightcase-icon-close:before {
-    content: '\e870';
-    font-family: "Linearicons-Free"; }
-  
-  .grid-title {
-    text-align: center; }
-  
-  /*=====  End of PORTFOLIO  ======*/
-  /*===============================
-  =            SideNav            =
-  ===============================*/
-  .sidenav {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1002;
-    top: 0;
-    left: 0;
-    background-color: #000;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
-    color: #fff; }
-  
-  .sidenav-content {
-    padding: 8px 32px;
-    transform: translateY(20px);
-    opacity: 0;
-    transition: transform 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86), opacity 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86); }
-  
-  .in .sidenav-content {
-    transform: translateY(0);
-    opacity: 1;
-    transition: transform 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.5s, opacity 0.5s 0.5s; }
-  
-  .sidenav a {
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    transition: 0.3s; }
-  
-  .sidenav a:hover {
-    color: #f1f1f1; }
-  
-  .sidenav #side-nav-close,
-  .sidenav #side-search-close {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px; }
-  
-  @media screen and (max-height: 450px) {
-    .sidenav {
-      padding-top: 15px; }
-    .sidenav a {
-      font-size: 18px; } }
-  
-  #side-search .form-control {
-    background-color: transparent; }
-  
-  #side-search .input-group-text {
-    background: transparent;
-    color: #fff; }
-  
-  /*==============================
-  =            SKILLS            =
-  ==============================*/
-  .skill-item {
-    width: 100%;
-    position: relative;
-    padding: 10px 0; }
-    .skill-item p {
-      font-size: 16px;
-      text-transform: uppercase;
-      display: inline-block;
-      font-weight: 500; }
-    .skill-item .text-muted {
-      color: #939393; }
-  
-  .progress-bar, .progress {
-    transition: all 4s; }
-  
-  /*=====  End of SKILLS  ======*/
-  /*============================
-  =            BLOG            =
-  ============================*/
-  .blog-item {
-    transition: all 0.3s ease-in-out;
-    background-color: #f7f8f9;
-    border-radius: 3px;
-    overflow: hidden; }
-    .blog-item:hover {
-      box-shadow: 0 5px 15px -5px #333;
-      transform: translateY(-6px);
-      -webkit-transform: translateY(-6px);
-      -moz-transform: translateY(-6px);
-      transform: translateY(-6px);
-      box-shadow: 0 7px 10px rgba(0, 0, 0, 0.15);
-      -moz-box-shadow: 0 7px 10px rgba(0, 0, 0, 0.15);
-      -webkit-box-shadow: 0 7px 10px rgba(0, 0, 0, 0.15); }
-  
-  .bg-grey .blog-item {
-    background-color: #fff; }
-  
-  .blog-item-wrapper {
-    margin-bottom: 30px; }
-  
-  .blog-img img {
-    width: 100%;
-    height: 250px;
-    object-fit: cover; }
-  
-  .blog-title h4 {
-    color: #000; }
-  
-  .blog-text {
-    padding: 15px; }
-  
-  .blog-tag {
-    color: #000;
-    letter-spacing: 1.1px;
-    text-transform: uppercase; }
-  
-  .blog-meta {
-    color: #939393; }
-    .blog-meta p {
-      display: inline-block;
-      font-size: 14px; }
-    .blog-meta a {
-      color: #939393; }
-  
-  .blog-author {
-    display: inline-block;
-    color: #939393; }
-    .blog-author p {
-      font-size: 14px;
-      margin-bottom: 0; }
-  
-  .blog-share-wrapper {
-    float: right;
-    display: inline-block;
-    margin: 0 -5px; }
-    .blog-share-wrapper .blog-share {
-      padding: 0 5px;
-      cursor: pointer; }
-  
-  .blog-content img.float-left {
-    margin: 15px 15px 15px 0; }
-  
-  .blog-content .img.float-right {
-    margin: 15px 0 15px 15px; }
-  
-  /*=====  End of BLOG  ======*/
-  /*====================================
-  =            FORM CONTROL            =
-  ====================================*/
-  .form-control:focus {
-    border-color: #ff00cc;
-    box-shadow: 0 0 0 0.2rem rgba(253, 101, 90, 0.25); }
-  
-  .form-control::-webkit-input-placeholder {
-    opacity: .5; }
-  
-  .form-control::-moz-placeholder {
-    opacity: .5; }
-  
-  .form-control:-ms-input-placeholder {
-    opacity: .5; }
-  
-  .form-control::-ms-input-placeholder {
-    opacity: .5; }
-  
-  .form-control::placeholder {
-    opacity: .5; }
-  
-  /*=====  End of FORM CONTROL  ======*/
-  /*==============================
-  =            CLIENT            =
-  ==============================*/
-  .client-slider .owl-nav {
-    display: none; }
-  
-  .client-slider .client-item {
-    padding: 0 40px; }
-  
-  /*=====  End of CLIENT  ======*/
   /*==================================
   =            RESPONSIVE            =
   ==================================*/
@@ -797,7 +481,7 @@ html, body {
   flex-direction: row;
 }
 
-@media all and (min-width: 768px) {
+@media all and (min-width: 786px) {
 .flex {
   justify-content: center;
   display: flex;
@@ -808,13 +492,11 @@ html, body {
   margin-bottom: 50px;
 }}
 
-
 .about { 
   text-align: center;
   margin-top: 30px;
   text-decoration: underline rgb(172, 50, 177);
 }
-
 
 
 .icon {
@@ -823,16 +505,21 @@ html, body {
   width: 50px;
 }
 
+
 .mid-container {
   background-color: rgb(240, 240, 240);
 }
 
+@media all and (min-width: 786px) {
 .text {
   inline-size: 350px;
   overflow-wrap: break-word;
+  text-align: center;
+}}
+
+.icon-flex {
+  text-align: center;
 }
-
-
 
 
 
